# DiscordChatExporterPy

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: codeql.yml
chat_exporter/: __init__.py  chat_exporter.py
chat_exporter/construct/: __init__.py  attachment_handler.py  message.py  transcript.py
chat_exporter/construct/assets/: __init__.py  attachment.py  component.py  embed.py  reaction.py
chat_exporter/ext/: __init__.py  cache.py  discord_icons.py  discriminator.py  emoji_convert.py  html_generator.py
chat_exporter/html/: base.html
chat_exporter/html/attachment/: audio.html  image.html  message.html  video.html
chat_exporter/html/component/: component_button.html  component_menu.html  component_menu_options.html  component_menu_options_emoji.html
chat_exporter/html/embed/: author.html  author_icon.html  body.html  description.html  field-inline.html  field.html  footer.html  footer_image.html  image.html  thumbnail.html  title.html
chat_exporter/html/message/: app-tag-verified.html  app-tag.html  content.html  interaction.html  message.html  meta.html  pin.html  reference.html  reference_unknown.html  start.html  thread.html  thread_add.html  thread_remove.html
chat_exporter/html/reaction/: custom_emoji.html  emoji.html
chat_exporter/html/script/: channel_subject.html  channel_topic.html
chat_exporter/parse/: __init__.py  markdown.py  mention.py
requirements/: _.txt  dev.txt  test.txt
