[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "chat_exporter"
keywords = ["chat exporter", "discord chat exporter", "discord", "discordpy"]
description = "A Python Package to Export Discord Chat Logs to HTML-Transcripts"
readme = "README.md"
authors = [
    { name = "syntax",  email = "me@syntax.fo"  },
]
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed"
]
dynamic = ["version", "dependencies"]

[project.urls]
GitHub = "https://github.com/1337Syntax/DiscordChatExporterPy"

[tool.setuptools]
packages = [
    "chat_exporter",
]

[tool.setuptools.dynamic]
dependencies = { file = "requirements/_.txt" }

[tool.autopep8]
ignore = ["E731"]
max_line_length = 88

[tool.isort]
case_sensitive = true
combine_as_imports = true
force_grid_wrap = 0
include_trailing_comma = true
known_discord = "discord"
known_typing = "typing"
line_length = 88
lines_between_sections = 1
multi_line_output = 3
order_by_type = true
reverse_relative = true
sections = ["FUTURE", "DISCORD", "THIRDPARTY", "TYPING", "FIRSTPARTY", "LOCALFOLDER"]

[tool.pyright]
pythonVersion = "3.8"
typeCheckingMode = "basic"
